# p2spice

./: .pre-commit-config.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.zencoder/rules/: django-project.md
config/: settings.py  urls.py
landing/: admin.py  apps.py  cart.py  context_processors.py  models.py  urls.py  views.py
landing/migrations/: 0001_initial.py
landing/templates/landing/: base.html  home.html  index.html
landing/templates/landing/cart/: detail.html
landing/templates/landing/payment/: cancelled.html  success.html
landing/templates/registration/: login.html  logout.html
p2spice/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: landing.css  styles.css
staticfiles/css/: styles.css
