[project]
name = "p2spice"
version = "0.1.0"
description = "P2's Spice Company website"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.2",
    "black==25.9.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "django==5.2.6",
    "django-environ==0.12.0",
    "django-filter==25.1",
    "djangorestframework==3.16.1",
    "idna==3.10",
    "markdown==3.9",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "phonenumbers==9.0.14",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "psycopg2-binary==2.9.10",
    "pytokens==0.1.10",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "sqlparse==0.5.3",
    "stripe==13.0.1",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uwsgi==2.0.31",
]

[tool.ruff]
# Match black's default line length
line-length = 88
target-version = "py312" # Set your target Python version

[tool.ruff.lint]
# Enable Flake8's F, E, W rules by default, plus some extras
select = ["E", "W", "F", "I", "UP", "B", "C4", "DJ", "S"]
# E: pycodestyle errors
# W: pycodestyle warnings
# F: Pyflakes
# I: isort (import sorting)
# UP: pyupgrade (modernizing syntax)
# B: flake8-bugbear (common issues)
# C4: flake8-comprehensions
# DJ: Django-specific rules
# S: bandit (security issues)

# Exclude migration files from linting
exclude = ["**/migrations/*.py"]
# Ignore some specific rules if needed, e.g., missing docstrings
ignore = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.format]
# Enable Ruff's highly performant formatter as a drop-in Black replacement
# It is recommended to use ruff format instead of black now
quote-style = "double"
indent-style = "space"